# find-hackage

./: .gitignore  Procfile  bower.json  execute.sh  find-hackage.cabal  gulpfile.js  package.json  schema.json
src/: StorePackage.hs  Update.hs  find-hackage.hs
static/: main.html  opensearch.xml
static/css/: main.css  main.min.css
static/js/: main.js  main.min.js
static/parts/: navigationBar.html  pagination.html
static/views/: index.html  search.html
