name:                find-hackage
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki
maintainer:          philopon.dependence@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

flag store-package
  default: False

executable store-package
  main-is:             StorePackage.hs
  if flag(store-package)
    build-depends:       base                 >=4.7 && <4.8
                       , tar                  >=0.4
                       , transformers         >=0.4
                       , resourcet            >=1.1
                       , aeson                >=0.8
                       , bytestring           >=0.10
                       , conduit              >=1.2
                       , conduit-extra        >=1.1
                       , unordered-containers >=0.2.5
                       , text                 >=1.2
                       , vector               >=0.10
                       , Cabal                >=1.20
                       , http-client-tls      >=0.2
                       , http-conduit         >=2.1
                       , lifted-base          >=0.2
                       , time                 >=1.4
                       , old-locale           >=1.0
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src
  ghc-options:         -Wall -O2 -main-is StorePackage
  default-language:    Haskell2010

executable find-hackage
  main-is:             find-hackage.hs
  build-depends:       base                 >=4.7 && <4.8
                     , tar                  >=0.4
                     , transformers         >=0.4
                     , resourcet            >=1.1
                     , aeson                >=0.8
                     , bytestring           >=0.10
                     , conduit              >=1.2
                     , conduit-extra        >=1.1
                     , unordered-containers >=0.2.5
                     , text                 >=1.2
                     , vector               >=0.10
                     , Cabal                >=1.20
                     , http-client-tls      >=0.2
                     , http-conduit         >=2.1
                     , lifted-base          >=0.2
                     , time                 >=1.4
                     , old-locale           >=1.0

                     , exceptions           >=0.6
                     , http-types           >=0.8
                     , monad-control        >=0.3
                     , apiary               >=1.1.4
                     , apiary-helics        >=1.1.4
                     , warp                 >=3.0
                     , filepath             >=1.3
                     , http-date            >=0.0
                     , http-client          >=0.4
                     , unix-compat          >=0.4
                     , lens                 >=4.6
                     , bytestring-show      >=0.3
                     , lens-aeson           >=1.0
                     , pugixml              >=0.3
                     , bytestring-trie      >=0.2
  hs-source-dirs:      src
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010
